force-app/main/default/objects/cdcpc__RD_TBL_MfgData__c/cdcpc__RD_TBL_MfgData__c.object-meta.xml
<CustomObject>
    <label>RD TBL MfgData</label>
    <nameField>
        <label>RD TBL MfgData</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD TBL MfgData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>