force-app/main/default/objects/cdcpc__RD_TBL_MfgData__c/fields/cdcpc__AMBIENT_AVG__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__AMBIENT_AVG__c</fullName>
    <label>AMBIENT_AVG</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>