force-app/main/default/objects/cdcpc__RD_TBL_MfgData__c/fields/cdcpc__M280__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__M280__c</fullName>
    <label>M280</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>