force-app/main/default/objects/cdcpc__RD_TBL_MfgData__c/fields/cdcpc__MCD__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MCD__c</fullName>
    <label>MCD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>