force-app/main/default/objects/cdcpc__RD_TBL_MfgData__c/fields/cdcpc__PartNo__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PartNo__c</fullName>
    <label>PartNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>