force-app/main/default/objects/cdcpc__RD_TBL_MfgData__c/fields/cdcpc__TEMP_VAL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TEMP_VAL__c</fullName>
    <label>TEMP_VAL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>