force-app/main/default/objects/cdcpc__RD_TBL_MfgData__c/fields/cdcpc__WorkorderNo__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__WorkorderNo__c</fullName>
    <label>WorkorderNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>