force-app/main/default/objects/cdcpc__RD_TBL_MfgData__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__AMBIENT_AVG__c</columns>
    <columns>cdcpc__M280__c</columns>
    <columns>cdcpc__M220__c</columns>
    <columns>cdcpc__M390__c</columns>
    <columns>cdcpc__MCD__c</columns>
    <columns>cdcpc__MCSM__c</columns>
    <columns>cdcpc__PartNo__c</columns>
    <columns>cdcpc__SEALTYPE__c</columns>
    <columns>cdcpc__TEMP_AVG__c</columns>
    <columns>cdcpc__TEMP_VAL__c</columns>
    <columns>cdcpc__WorkorderNo__c</columns>
    <columns>cdcpc__SerialNo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>